# pi-robot-projects

./: CMakeLists.txt
colorMusic/: CMakeLists.txt  cmusicdata.h  colormusic.h  colormusic_hw.h  colors.h  consumer.h  consumer_html.h  consumer_ws2801.h  fft_processor.h  gen_sign.sh  main.cpp  receiver.h  run_record.sh  sender.h  test_fl_40000.raw  version.h  version.h.in
colorMusic/test/: sin10000Hz_1sec.raw  sin1000Hz_1sec.raw  sin100Hz_1sec.raw  sin15000Hz_1sec.raw  sin19000Hz_1sec.raw  sin19800Hz_1sec.raw  sin1980Hz_1sec.raw  sin19900Hz_1sec.raw  sin1990Hz_1sec.raw  sin2000Hz_1sec.raw  sin5000Hz_1sec.raw  sin500Hz_1sec.raw  sin50Hz_1sec.raw
colorMusic/tests/: CMakeLists.txt
colorMusic/tests/stream-info/: CMakeLists.txt  stream_info.cpp
colorMusic/tests/test-palette/: CMakeLists.txt  test_palette.cpp
dust-detector/: CMakeLists.txt  context.h  control.h  dust-detector.json  main.cpp  state_factory.h  state_init.h  state_measurement.h  version.h  version.h.in  web_settings.h
dust-detector/daemon/: dusts
sleds/: CMakeLists.txt
